[gd_scene load_steps=10 format=3 uid="uid://disoh1s8v40t4"]

[ext_resource type="Script" uid="uid://vge4afmdgk0w" path="res://scripts/interface/menu/MenuPrincipal.gd" id="1_hw27t"]
[ext_resource type="Shader" uid="uid://rmamm21aqfmv" path="res://shaders/patrão.gdshader" id="2_37x5u"]
[ext_resource type="Texture2D" uid="uid://j2djnqks58ci" path="res://assets/interface/menu/patrao.jpg" id="3_pg16i"]
[ext_resource type="Texture2D" uid="uid://cmd1opiiuwsp6" path="res://assets/interface/menu/CircleVsRectanglesTitulo.png" id="4_gglsf"]
[ext_resource type="FontFile" uid="uid://bqx7fkovc5nlj" path="res://tipografia/StiffNeck-pZzd.ttf" id="5_myo1p"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pg16i"]
shader = ExtResource("2_37x5u")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_myo1p"]
bg_color = Color(0.21568628, 0.8509804, 0.54901963, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nmamb"]
bg_color = Color(0.9254902, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mbk72"]
bg_color = Color(0.7764706, 0.7019608, 0.20392157, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_hw27t")

[node name="Patrão" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_pg16i")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_pg16i")
expand_mode = 1
stretch_mode = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Titulo" type="TextureRect" parent="Panel"]
top_level = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 47.0
offset_right = 300.0
offset_bottom = 317.0
grow_horizontal = 2
texture = ExtResource("4_gglsf")
stretch_mode = 2

[node name="Jogar" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -145.5
offset_top = -233.5
offset_right = 144.5
offset_bottom = -173.5
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_myo1p")
theme_override_font_sizes/font_size = 46
theme_override_styles/normal = SubResource("StyleBoxFlat_myo1p")
text = "JOGAR
"

[node name="Sair" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -145.5
offset_top = -87.5
offset_right = 144.5
offset_bottom = -27.5
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_myo1p")
theme_override_font_sizes/font_size = 46
theme_override_styles/normal = SubResource("StyleBoxFlat_nmamb")
text = "SAIR"

[node name="Creditos" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -145.5
offset_top = -160.5
offset_right = 144.5
offset_bottom = -100.5
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_myo1p")
theme_override_font_sizes/font_size = 46
theme_override_styles/normal = SubResource("StyleBoxFlat_mbk72")
text = "CREDITOS
"

[node name="lblTempo" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 156.0
grow_vertical = 0
text = "Melhor tempo sobrevivido: "
vertical_alignment = 1

[connection signal="pressed" from="Panel/Jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="Panel/Sair" to="." method="_on_sair_pressed"]
[connection signal="pressed" from="Panel/Creditos" to="." method="_on_creditos_pressed"]
